--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "590-project3",
   "version": "1.0.0",
-  "description": "Pong remake!!!!",
+  "description": "Hot potato!!!!",
   "main": "index.js",
   "scripts": {
     "build": "babel ./client --out-file ./hosted/compiled.js",
@@ -12,11 +12,11 @@
     "test": "echo \"Tests complete\""
   },
   "repository": {
-    "type": "git",
+    "type": "git", 
     "url": "git+https://github.com/AJKaufman/590-Project3.git"
   },
   "author": "Aidan Kaufman",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/AJKaufman/590-Project3/issues"
   },
@@ -24,14 +24,27 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "redis-cli": "^1.0.2"
   },
   "dependencies": {
     "socket.io": "^1.7.2",
     "express": "^4.15.2",
-    "xxhashjs": "^0.2.1"
+    "xxhashjs": "^0.2.1",
+    "body-parser": "^1.15.0",
+    "compression": "^1.6.1",
+    "connect-redis": "^3.0.2",
+    "cookie-parser": "^1.3.3",
+    "csurf": "^1.8.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.13.0",
+    "helmet": "^1.3.0",
+    "mongoose": "^4.4.6",
+    "serve-favicon": "^2.3.0",
+    "underscore": "^1.8.3"
   }
 }
