Hot new action, pngs for potates, score system

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "buildComp": "babel ./client/app --presets react --out-file ./hosted/compiled.js",
     "buildLoginBundle": "babel ./client/login --presets react --out-file ./hosted/loginBundle.js",
     "build": "npm run buildComp && npm run buildLoginBundle",
-    "watch": "babel --watch ./client --presets react --out-file ./hosted/compiled.js",
+    "watchAppBundle": "babel --watch ./client/app --presets react --out-file ./hosted/compiled.js",
+    "watchLoginBundle": "babel --watch ./client/login --presets react --out-file ./hosted/loginBundle.js",
     "nodemon": "nodemon --watch ./src ./src/server.js",
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
